crates/core-subsystem/core-resolver/src/validation/snapshots/core_resolver__validation__document_validator__tests__query_depth_limit_direct-2.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
assertion_line: 604
expression: validator.validate(create_query_document(query))
---
Err(
    SelectionSetTooDeep(
        Pos(8:37),
    ),
)
