crates/core-subsystem/core-resolver/src/validation/snapshots/core_resolver__validation__document_validator__tests__query_depth_limit_direct.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
assertion_line: 600
expression: validator.validate(create_query_document(query))
---
Ok(
    ValidatedOperation {
        name: None,
        typ: Query,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "concerts",
                ),
                arguments: {},
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "venue",
                        ),
                        arguments: {},
                        subfields: [
                            ValidatedField {
                                alias: None,
                                name: Name(
                                    "concerts",
                                ),
                                arguments: {},
                                subfields: [
                                    ValidatedField {
                                        alias: None,
                                        name: Name(
                                            "venue",
                                        ),
                                        arguments: {},
                                        subfields: [
                                            ValidatedField {
                                                alias: None,
                                                name: Name(
                                                    "concerts",
                                                ),
                                                arguments: {},
                                                subfields: [
                                                    ValidatedField {
                                                        alias: None,
                                                        name: Name(
                                                            "id",
                                                        ),
                                                        arguments: {},
                                                        subfields: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
)
