crates/core-subsystem/core-resolver/src/validation/snapshots/core_resolver__validation__document_validator__tests__query_depth_limit_through_fragment-2.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
assertion_line: 636
expression: validator.validate(create_query_document(query))
---
Err(
    SelectionSetTooDeep(
        Pos(14:25),
    ),
)
