crates/core-subsystem/core-resolver/src/validation/snapshots/core_resolver__validation__document_validator__tests__stray_argument_invalid.snap
---
source: resolver/src/graphql/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    StrayArguments(
        [
            "foo",
        ],
        "concert",
        Pos(3:17),
    ),
)
