crates/core-subsystem/core-resolver/src/validation/snapshots/core_resolver__validation__document_validator__tests__unmergeable_leaf_fields_mixed_aliases.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    MergeFields(
        "id",
        [
            Pos(4:21),
            Pos(5:21),
        ],
    ),
)
