crates/core-subsystem/core-resolver/src/validation/snapshots/core_resolver__validation__document_validator__tests__unmergeable_non_leaf_fields.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    MergeFields(
        "venue",
        [
            Pos(5:21),
            Pos(9:21),
        ],
    ),
)
