crates/core-subsystem/core-resolver/src/validation/snapshots/core_resolver__validation__document_validator__tests__unspecified_required_argument_invalid.snap
---
source: resolver/src/graphql/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    RequiredArgumentNotFound(
        "id",
        Pos(3:17),
    ),
)
