crates/core-subsystem/core-resolver/src/validation/snapshots/core_resolver__validation__document_validator__tests__with_operation_name_valid.snap
---
source: resolver/src/graphql/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Ok(
    ValidatedOperation {
        name: Some(
            "ConcertById",
        ),
        typ: Query,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "concert",
                ),
                arguments: {
                    "id": Number(
                        Number(1),
                    ),
                },
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "id",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "title",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "venue",
                        ),
                        arguments: {},
                        subfields: [
                            ValidatedField {
                                alias: None,
                                name: Name(
                                    "id",
                                ),
                                arguments: {},
                                subfields: [],
                            },
                            ValidatedField {
                                alias: None,
                                name: Name(
                                    "name",
                                ),
                                arguments: {},
                                subfields: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
)
